--- a/collectors/apps.plugin/multi_metadata.yaml
+++ b/collectors/apps.plugin/multi_metadata.yaml
@@ -1,7 +1,74 @@
 name: apps.plugin
 modules:
-  - module_name: system
-    plugin_name: apps.plugin
+  - meta:
+      plugin_name: apps.plugin
+      module_name: system
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: apps system
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
@@ -24,8 +91,75 @@ modules:
                 - name: sleeping_uninterruptible
                 - name: zombie
                 - name: stopped
-  - module_name: apps
-    plugin_name: apps.plugin
+  - meta:
+      plugin_name: apps.plugin
+      module_name: apps
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: apps apps
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
@@ -188,8 +322,75 @@ modules:
               chart_type: stacked
               dimensions:
                 - name: a dimension per app group
-  - module_name: groups
-    plugin_name: apps.plugin
+  - meta:
+      plugin_name: apps.plugin
+      module_name: groups
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: apps groups
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
@@ -352,8 +553,75 @@ modules:
               chart_type: stacked
               dimensions:
                 - name: a dimension per user group
-  - module_name: users
-    plugin_name: apps.plugin
+  - meta:
+      plugin_name: apps.plugin
+      module_name: users
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: apps users
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
@@ -516,8 +784,75 @@ modules:
               chart_type: stacked
               dimensions:
                 - name: a dimension per user
-  - module_name: netdata
-    plugin_name: apps.plugin
+  - meta:
+      plugin_name: apps.plugin
+      module_name: netdata
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: apps netdata
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
