--- a/collectors/cgroups.plugin/multi_metadata.yaml
+++ b/collectors/cgroups.plugin/multi_metadata.yaml
@@ -1,7 +1,74 @@
 name: cgroups.plugin
 modules:
-  - module_name: /sys/fs/cgroup
-    plugin_name: cgroups.plugin
+  - meta:
+      plugin_name: cgroups.plugin
+      module_name: /sys/fs/cgroup
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: cgroups /sys/fs/cgroup
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts:
       - name: cgroup_10min_cpu_usage
         link: https://github.com/netdata/netdata/blob/master/health/health.d/cgroups.conf
@@ -504,8 +571,75 @@ modules:
               chart_type: line
               dimensions:
                 - name: time
-  - module_name: /proc/net/dev
-    plugin_name: cgroups.plugin
+  - meta:
+      plugin_name: cgroups.plugin
+      module_name: /proc/net/dev
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: cgroups /proc/net/dev
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts:
       - name: cgroup_1m_received_packets_rate
         link: https://github.com/netdata/netdata/blob/master/health/health.d/cgroups.conf
@@ -727,8 +861,75 @@ modules:
               chart_type: line
               dimensions:
                 - name: mtu
-  - module_name: systemd
-    plugin_name: cgroups.plugin
+  - meta:
+      plugin_name: cgroups.plugin
+      module_name: systemd
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: cgroups systemd
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
