--- a/collectors/debugfs.plugin/multi_metadata.yaml
+++ b/collectors/debugfs.plugin/multi_metadata.yaml
@@ -1,7 +1,74 @@
 name: debugfs.plugin
 modules:
-  - module_name: /sys/kernel/debug/extfrag
-    plugin_name: debugfs.plugin
+  - meta:
+      plugin_name: debugfs.plugin
+      module_name: /sys/kernel/debug/extfrag
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: debugfs /sys/kernel/debug/extfrag
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
@@ -64,8 +131,75 @@ modules:
                 - name: order8
                 - name: order9
                 - name: order10
-  - module_name: /sys/kernel/debug/zswap
-    plugin_name: debugfs.plugin
+  - meta:
+      plugin_name: debugfs.plugin
+      module_name: /sys/kernel/debug/zswap
+      alternative_monitored_instances: []
+      monitored_instance:
+        name: debugfs /sys/kernel/debug/zswap
+        link: ''
+        categories: []
+        icon_filename: ''
+      related_resources:
+        integrations:
+          list:
+            - plugin_name: ''
+              module_name: ''
+      info_provided_to_referring_integrations:
+        description: ''
+      keywords: []
+      most_popular: false
+    overview:
+      data_collection:
+        metrics_description: ''
+        method_description: ''
+      supported_platforms:
+        include: []
+        exclude: []
+      multi-instance: true
+      additional_permissions:
+        description: ''
+      default_behavior:
+        auto_detection:
+          description: ''
+        limits:
+          description: ''
+        performance_impact:
+          description: ''
+    setup:
+      prerequisites:
+        list:
+          - title: ''
+            description: ''
+      configuration:
+        file:
+          name: ''
+          description: ''
+        options:
+          description: ''
+          folding:
+            title: ''
+            enabled: true
+          list:
+            - name: ''
+              default_value: ''
+              description: ''
+              required: false
+        examples:
+          folding:
+            enabled: true
+            title: ''
+          list:
+            - name: ''
+              folding:
+                enabled: false
+              description: ''
+              config: ''
+    troubleshooting:
+      problems:
+        list:
+          - name: ''
+            description: ''
     alerts: []
     metrics:
       folding:
