--- a/integrations/cloud-notifications/metadata.yaml
+++ b/integrations/cloud-notifications/metadata.yaml
@@ -504,6 +504,7 @@
   keywords:
     - VictorOps
     - Splunk
+    - On-Call
   overview:
     notification_description: "From the Cloud interface, you can manage your space's notification settings and from these you can add a specific configuration to get notifications delivered on Splunk VictorOps."
     notification_limitations: ''
