--- a/src/go/collectors/go.d.plugin/modules/storcli/metadata.yaml
+++ b/src/go/collectors/go.d.plugin/modules/storcli/metadata.yaml
@@ -80,7 +80,23 @@ modules:
     troubleshooting:
       problems:
         list: []
-    alerts: []
+    alerts:
+      - name: storcli_controller_status
+        metric: storcli.controller_status
+        info: RAID controller ${label:controller_number} health status is not optimal
+        link: https://github.com/netdata/netdata/blob/master/src/health/health.d/storcli.conf
+      - name: storcli_controller_bbu_status
+        metric: storcli.controller_bbu_status
+        info: RAID controller ${label:controller_number} BBU is unhealthy
+        link: https://github.com/netdata/netdata/blob/master/src/health/health.d/storcli.conf
+      - name: storcli_phys_drive_errors
+        metric: storcli.phys_drive_errors
+        info: RAID physical drive c${label:controller_number}/e${label:enclosure_number}/s${label:slot_number} errors
+        link: https://github.com/netdata/netdata/blob/master/src/health/health.d/storcli.conf
+      - name: storcli_phys_drive_predictive_failures
+        metric: storcli.phys_drive_predictive_failures
+        info: RAID physical drive c${label:controller_number}/e${label:enclosure_number}/s${label:slot_number} predictive failures
+        link: https://github.com/netdata/netdata/blob/master/src/health/health.d/storcli.conf
     metrics:
       folding:
         title: Metrics
