--- a/.github/data/distros.yml
+++ b/.github/data/distros.yml
@@ -81,7 +81,7 @@ include:
     packages: &amzn_packages
       type: rpm
       repo_distro: amazonlinux/2
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       arches:
         - x86_64
         - aarch64
@@ -106,7 +106,7 @@ include:
     packages:
       type: rpm
       repo_distro: el/7
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       alt_links:
         - el/7Server
         - el/7Client
@@ -129,7 +129,7 @@ include:
     packages: &cs_packages
       type: rpm
       repo_distro: el/c9s
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       arches:
         - x86_64
         - aarch64
@@ -197,7 +197,7 @@ include:
     packages: &fedora_packages
       type: rpm
       repo_distro: fedora/40
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       arches:
         - x86_64
         - aarch64
@@ -231,7 +231,7 @@ include:
     packages: &opensuse_packages
       type: rpm
       repo_distro: opensuse/15.5
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       arches:
         - x86_64
         - aarch64
@@ -250,7 +250,7 @@ include:
     packages: &oracle_packages
       type: rpm
       repo_distro: ol/8
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       arches:
         - x86_64
         - aarch64
@@ -274,7 +274,7 @@ include:
     packages: &rocky_packages
       type: rpm
       repo_distro: el/9
-      builder_rev: *default_builder_rev
+      builder_rev: *def_builder_rev
       alt_links:
         - el/9Server
         - el/9Client
